--- a/app/src/main/res/layout/fragment_other_user_profile.xml
+++ b/app/src/main/res/layout/fragment_other_user_profile.xml
@@ -99,7 +99,7 @@
 
     <Button
         android:id="@+id/btnFollow"
-        android:layout_width="85dp"
+        android:layout_width="wrap_content"
         android:layout_height="30dp"
         android:layout_alignParentTop="true"
         android:layout_alignParentEnd="true"
