--- a/app/src/main/res/layout/expandable_rv.xml
+++ b/app/src/main/res/layout/expandable_rv.xml
@@ -78,7 +78,7 @@
                         android:src="@drawable/vote" />
 
                     <TextView
-                        android:id="@+id/tvNumVotesFirst"
+                        android:id="@+id/tvNumVotesFirstD"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="290dp"
@@ -98,7 +98,7 @@
                     android:layout_marginEnd="30dp">
 
                     <TextView
-                        android:id="@+id/tvNumVotesThird"
+                        android:id="@+id/tvNumVotesThirdD"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="250dp"
@@ -143,7 +143,7 @@
                     android:layout_marginEnd="20dp">
 
                     <TextView
-                        android:id="@+id/tvNumVotesSecond"
+                        android:id="@+id/tvNumVotesSecondD"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginLeft="270dp"
