--- a/app/src/main/res/layout/fragment_user_badges.xml
+++ b/app/src/main/res/layout/fragment_user_badges.xml
@@ -7,11 +7,11 @@
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvUserBadges"
-        android:layout_width="match_parent"
-        android:layout_height="322dp"
+        android:layout_width="409dp"
+        android:layout_height="289dp"
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
-        android:layout_marginStart="0dp"
-        android:layout_marginBottom="2dp" />
+        android:layout_marginStart="2dp"
+        android:layout_marginBottom="0dp" />
 
 </RelativeLayout>
