--- a/app/src/main/res/layout/user_preview.xml
+++ b/app/src/main/res/layout/user_preview.xml
@@ -20,7 +20,7 @@
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            android:layout_height="207dp">
 
             <ImageView
                 android:id="@+id/ivUserPreviewPic"
@@ -28,8 +28,8 @@
                 android:layout_height="111dp"
                 android:layout_alignParentStart="true"
                 android:layout_alignParentTop="true"
-                android:layout_marginStart="18dp"
-                android:layout_marginTop="71dp"
+                android:layout_marginStart="122dp"
+                android:layout_marginTop="53dp"
                 app:srcCompat="@drawable/defaultprofilepic" />
 
             <TextView
@@ -39,20 +39,31 @@
                 android:layout_alignParentTop="true"
                 android:layout_alignParentEnd="true"
                 android:layout_gravity="center_horizontal|fill_vertical"
-                android:layout_marginTop="38dp"
-                android:layout_marginEnd="263dp"
+                android:layout_marginTop="25dp"
+                android:layout_marginEnd="159dp"
                 android:text="TextView"
                 android:textSize="16sp"
                 android:textStyle="bold" />
 
-            <androidx.recyclerview.widget.RecyclerView
-                android:id="@+id/rvUserPreviewBadges"
-                android:layout_width="227dp"
+            <TextView
+                android:id="@+id/tvMembersince"
+                android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_alignParentTop="true"
-                android:layout_alignParentEnd="true"
-                android:layout_marginTop="11dp"
-                android:layout_marginEnd="4dp" />
+                android:layout_alignParentStart="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="181dp"
+                android:layout_marginBottom="11dp"
+                android:text="Loading..." />
+
+            <TextView
+                android:id="@+id/tvUserSince"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentBottom="true"
+                android:layout_marginStart="105dp"
+                android:layout_marginBottom="12dp"
+                android:text="User since:" />
 
         </RelativeLayout>
 
