Push notifications for creating a category

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -41,8 +41,8 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="476dp"
-        android:backgroundTint="#405DE6"
+        android:layout_marginTop="461dp"
+        android:backgroundTint="#FFC107"
         android:text="Login" />
 
     <Button
@@ -51,9 +51,22 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="149dp"
+        android:layout_marginBottom="88dp"
         android:backgroundTint="#4CAF50"
         android:text="Sign Up" />
+
+    <ImageView
+        android:id="@+id/ivAppLogo"
+        android:layout_width="412dp"
+        android:layout_height="265dp"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="-9dp"
+        android:layout_marginTop="63dp"
+        android:layout_marginEnd="8dp"
+        app:srcCompat="@drawable/app_logo" />
 
 
 </RelativeLayout>
