--- a/app/src/main/res/values/style.xml
+++ b/app/src/main/res/values/style.xml
@@ -4,4 +4,10 @@
         <item name="android:windowEnterAnimation">@anim/bottom_up</item>
         <item name="android:windowExitAnimation">@anim/bottom_down</item>
     </style>
+
+    <style name="PopMe" >
+        <item name="android:windowIsTranslucent">true</item>
+        <item name="android:windowCloseOnTouchOutside">true</item>
+    </style>
+
 </resources>
