--- a/app/src/main/res/layout/fragment_create.xml
+++ b/app/src/main/res/layout/fragment_create.xml
@@ -6,73 +6,80 @@
     android:layout_height="match_parent"
     tools:context=".ui.create.CreateFragment">
 
-    <ImageButton
-        android:id="@+id/btnTakeVideoChallenge"
-        android:layout_width="wrap_content"
-        android:layout_height="41dp"
-        android:layout_alignParentStart="true"
+    <RelativeLayout
+        android:id="@+id/video_view_container"
+        android:layout_width="357dp"
+        android:layout_height="219dp"
         android:layout_alignParentTop="true"
-        android:layout_marginStart="46dp"
-        android:layout_marginTop="42dp"
-        android:src="@android:drawable/ic_menu_camera" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="70dp">
 
-    <TextView
-        android:id="@+id/tvTakeVideoChallenge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginStart="27dp"
-        android:layout_marginTop="17dp"
-        android:text="Take Video"
-        android:textSize="20sp" />
+        <VideoView
+            android:id="@+id/vvVideoToPostChallenge"
+            android:layout_width="167dp"
+            android:layout_centerInParent="true"
+            android:layout_height="210dp" />
 
-    <VideoView
-        android:id="@+id/vvVideoToPostChallenge"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@id/autoCompleteTextView"
-        android:layout_below="@id/btnTakeVideoChallenge"
-        android:layout_centerInParent="true" />
+        <FrameLayout
+            android:id="@+id/placeholder"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="4dp"
+            android:layout_marginEnd="2dp"
+            android:background="@drawable/rounded_videoview" >
+        </FrameLayout>
 
-<!--    <EditText-->
-<!--        android:id="@+id/etCategory"-->
-<!--        android:layout_width="279dp"-->
-<!--        android:layout_height="wrap_content"-->
-<!--        android:layout_alignParentBottom="true"-->
-<!--        android:layout_centerHorizontal="true"-->
-<!--        android:layout_marginBottom="238dp"-->
-<!--        android:ems="10"-->
-<!--        android:hint="Enter your category"-->
-<!--        android:inputType="textPersonName" />-->
+        <ImageButton
+            android:id="@+id/btnTakeVideoChallenge"
+            android:layout_width="63dp"
+            android:layout_height="43dp"
+            android:layout_marginLeft="100dp"
+            android:layout_alignParentLeft="true"
+            android:layout_marginTop="90dp"
+            android:src="@drawable/output_onlinepngtools" />
+
+        <ImageView
+            android:id="@+id/ivUpload"
+            android:layout_width="61dp"
+            android:layout_height="43dp"
+            android:layout_alignParentRight="true"
+            android:layout_marginTop="90dp"
+            android:layout_marginRight="100dp"
+            android:src="@android:drawable/stat_sys_upload" />
+
+    </RelativeLayout>
 
     <AutoCompleteTextView
         android:id="@+id/autoCompleteTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/etCaptionChallenge"
+        android:layout_width="319dp"
+        android:layout_height="38dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginLeft="106dp"
-        android:layout_marginTop="17dp"
-        android:layout_marginBottom="7dp"
-        android:hint="Enter a category"
+        android:layout_marginEnd="44dp"
+        android:layout_marginBottom="292dp"
+        android:background="@drawable/rounded_edittext"
         android:ems="50"
-        android:text="">
+        android:paddingLeft="20dp">
 
         <requestFocus />
     </AutoCompleteTextView>
 
     <EditText
         android:id="@+id/etCaptionChallenge"
-        android:layout_width="361dp"
+        android:layout_width="321dp"
         android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="177dp"
+        android:layout_marginEnd="43dp"
+        android:layout_marginBottom="185dp"
         android:ems="10"
         android:hint="Write a caption"
-        android:inputType="textPersonName" />
-
+        android:inputType="textPersonName"
+        android:textSize="14sp" />
 
     <Button
         android:id="@+id/btnPostChallenge"
@@ -80,38 +87,111 @@
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="16dp"
+        android:backgroundTint="#FFC107"
         android:text="POST" />
 
     <Button
         android:id="@+id/btnAddLocation"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="31dp"
+        android:layout_alignParentEnd="true"
         android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="113dp"
-        android:backgroundTint="#00BCD4"
-        android:text="Add location" />
+        android:layout_marginEnd="250dp"
+        android:layout_marginBottom="93dp"
+        android:backgroundTint="#4CAF50"
+        android:text="Add location"
+        android:textSize="10sp" />
 
     <TextView
-        android:id="@+id/tvUpload"
+        android:id="@+id/tvNewPost"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="27dp"
-        android:text="Upload Video"
-        android:textSize="20sp" />
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="28dp"
+        android:text="New Post"
+        android:textColor="#78BAD8"
+        android:textSize="20sp"
+        android:textStyle="bold" />
 
-    <ImageView
-        android:id="@+id/ivUpload"
-        android:layout_width="61dp"
-        android:layout_height="43dp"
+    <TextView
+        android:id="@+id/tvCategoryTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="38dp"
-        android:layout_marginEnd="54dp"
-        android:src="@android:drawable/ic_menu_upload" />
+        android:layout_centerVertical="true"
+        android:layout_marginStart="51dp"
+        android:layout_marginTop="305dp"
+        android:text="CATEGORY"
+        android:textSize="12sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/tvCaptionTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="407dp"
+        android:text="DESCRIPTION"
+        android:textSize="12sp"
+        android:textStyle="bold" />
+
+    <TextView
+        android:id="@+id/tvLocationTitle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="511dp"
+        android:text="LOCATION"
+        android:textSize="12sp"
+        android:textStyle="bold" />
+
+    <View
+        android:id="@+id/divider2"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="50dp"
+        android:layout_marginBottom="272dp"
+        android:background="?android:attr/listDivider" />
+
+    <View
+        android:id="@+id/divider3"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="50dp"
+        android:layout_marginBottom="169dp"
+        android:background="?android:attr/listDivider" />
+
+    <View
+        android:id="@+id/divider4"
+        android:layout_width="wrap_content"
+        android:layout_height="1dp"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginStart="50dp"
+        android:layout_marginBottom="84dp"
+        android:background="?android:attr/listDivider" />
+
+    <TextView
+        android:id="@+id/tvCaptionTitle3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginStart="48dp"
+        android:layout_marginTop="407dp"
+        android:text="DESCRIPTION"
+        android:textSize="12sp" />
+
 
 </RelativeLayout>
