--- a/app/src/main/res/layout/fragment_discover.xml
+++ b/app/src/main/res/layout/fragment_discover.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -13,12 +14,23 @@
 
         <SearchView
             android:id="@+id/action_search"
-            android:layout_width="match_parent"
+            android:layout_width="332dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="-3dp"
-            android:layout_marginTop="3dp" />
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="-1dp" />
+
+        <ImageView
+            android:id="@+id/ivWorld"
+            android:layout_width="50dp"
+            android:layout_height="50dp"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="5dp"
+            android:layout_marginEnd="15dp"
+            app:srcCompat="@drawable/world" />
+
 
         <TextView
             android:id="@+id/tvCategories"
@@ -85,5 +97,7 @@
             android:layout_marginStart="2dp"
             android:layout_marginTop="11dp"
             android:layout_marginEnd="0dp" />
+
     </RelativeLayout>
+
 </ScrollView>
