--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -7,14 +7,19 @@
         android:title="@string/title_home" />
 
     <item
+        android:id="@+id/navigation_viewChallenges"
+        android:icon="@drawable/firstplace"
+        android:title="Discover" />
+
+    <item
         android:id="@+id/navigation_create"
         android:icon="@drawable/ic_dashboard_black_24dp"
         android:title="@string/title_create" />
 
     <item
-        android:id="@+id/navigation_viewChallenges"
-        android:icon="@drawable/firstplace"
-        android:title="Discover" />
+        android:id="@+id/navigation_watchList"
+        android:icon="@drawable/watched"
+        android:title="Watch List" />
 
     <item
         android:id="@+id/navigation_profile"
